--- a/wp-content/themes/odin/assets/sass/style.scss
+++ b/wp-content/themes/odin/assets/sass/style.scss
@@ -70,6 +70,7 @@ Description: Odin main stylesheet.
 @import "odin/footer";
 @import "odin/produtos";
 @import "odin/single-produtos";
+@import "odin/media-query";
 
 // Odin CSS Helpers
 @import "utilities/helpers";
