--- a/wp-content/themes/odin/assets/sass/odin/_home.scss
+++ b/wp-content/themes/odin/assets/sass/odin/_home.scss
@@ -94,7 +94,7 @@
 */
 .banner{
 	width: 100%;
-	height: 650px;
+	//height: 650px;
 	max-height: 650px;
 	//background: url(../images/banner.jpg) no-repeat center top;
 	//background-size: contain;
